Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Network: provide dedicated metrics for modem & wifi channel states
  New metrics:
    m.net.mdm.network
    m.net.mdm.sq
    m.net.wifi.network
    m.net.wifi.sq
- Regen brake signal: added power base range, power smoothing & foot brake config
  New configs:
    vehicle [batpwr.smoothing] = 2.0    Battery power smoothing factor (samples, 0 = none)
    vehicle [brakelight.basepwr] = 0    Base power range around zero [kW]
    vehicle [brakelight.ignftbrk] = no  Ignore foot brake
- Twizy: added tuning option for SEVCON_T45 + Gearbox_T80 hybrid
  Configuration: xrt [type] = "SC45GB80"
- Twizy: OBD2 VIN reading & cluster DTC monitoring
  New commands:
    xrt dtc [show]                      Show DTC report
    xrt dtc reset                       Reset statistics
    xrt dtc clear                       Clear DTC stored in OVMS & car
  New configs:
    xrt [dtc_autoreset] = no            Reset statistics on each drive/charge
  New history records:
    RT-OBD-ClusterDTC (rec_nr = DTC slot nr)
- New vehicle: Smart ED/EQ 4.Generation (453) (adaption by Thomas Heuer <egon@heuer-humfeld.de>)

2019-05-12 MWJ  3.2.002  OTA release
- Vehicle framework: added idling alert (ported from V2)
- Locations: Introduce support for location actions
- Twizy: Release 1.0.0 -- all V2 features planned are now included in V3
- Vehicle framework: Regenerative braking signal generation
- Vehicle framework: DBC and RETOOLS integrations
- Vehicles: Extensions to Kia Niro, Kia Soul, Mitsubishi, Nissan Leaf,
  Renault Twizy, SmartED, Tesla Model S, and Think City

2019-01-19 MWJ  3.2.001  OTA release
- Twizy: support auxiliary charger fan and auxiliary charger
  New configs:
    xrt [aux_fan_port]        = EGPIO port number, 0 (default) = off
    xrt [aux_charger_port]    = EGPIO port number, 0 (default) = off
- Twizy: lock & valet mode
  New configs for crash/reboot persistency: